k8/platforms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: olawaleusman01/platformservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: platformnpservice-srv
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
    - port: 80
      name: platformservice
      targetPort: 80
      nodePort: 30001
---
apiVersion: v1
kind: Service
metadata:
  name: platform-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
    - port: 80
      name: platformservice
      targetPort: 80
    - name: platformgrpc
      port: 666
      targetPort: 666
